# latex-g7-32

./: .gitignore  .gitmodules  .latexmkmodrc  .latexmkrc  CMakeLists.txt  Makefile  README.md  TODO.md  build.bat  build.sh
cmake/: CopyConverted.cmake  GSConv.cmake  RequireProgram.cmake
dia/: rpz-idef0.dia
docker/: Dockerfile  build.sh  publish.sh
docker/scripts/: boot.sh
dot/: cow2.dot
fonts/: README.txt  Лицензия на шрифты.txt
graphics/dot/: cow2.dot
lyx/: 00-abstract.lyx  10-defines.lyx  11-abbrev.lyx  12-intro.lyx  20-analysis.lyx  30-design.lyx  40-impl.lyx  50-research.lyx  60-economics.lyx  70-bzd.lyx  80-conclusion.lyx  81-biblio.lyx  90-appendix1.lyx  91-appendix2.lyx  rpz.lyx
lyx/layouts/: g7-32_class.inc  g7-32_counters.inc  g7-32_floats.inc  g7-32_insets.inc  g7-32_layouts.inc  g7-32_lists.inc  g7-32_sections.inc  g7-32_starsections.inc  g7-32_struct.inc  g7-32_text.layout  g7-32_title.inc  local-minted.module  minted.module
src/: test.c
tex/: .gitignore  00-abstract.tex  00-title.tex  00-titlepage.tex  10-defines.tex  11-abbrev.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  60-economics.tex  70-bzd.tex  80-conclusion.tex  81-biblio.tex  90-appendix1.tex  91-appendix2.tex  G2-105.sty  G7-32.cls  G7-32.sty  GostBase.clo  cyrtimespatched.sty  gost780u.bst  gosttitleGost7-32.sty  gosttitleGostRV15-110.sty  gosttitleGostRV15-110mipt.sty  gosttitleSch-okr.sty  listings.inc.tex  local-minted.sty  macros.inc.tex  minted.inc.tex  preamble-std.tex  preamble.inc.tex  rpz.bib  rpz.tex
utils/: gsconv.sh  install.py  pdfcrop  pdftrimwhite  texdepend
